--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <div class="profileText">
                 <div class="imgBx">
-                    <img alt="profile picture" src="./imgs/barbara.jpg">
+                    <img alt="profile picture" src="./img/barbara.jpg">
                 </div>
                 <h2>Bárbara Leimig</h2>
             </div>
