--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
                 <h2 class="title2">Resumo Pessoal</h2>
                 <p>Sou uma profissional em transição de carreira, com formação em Odontologia e atualmente estudante de
                     Análise e Desenvolvimento de Sistemas. Sou apaixonada por tecnologia, movida pela curiosidade e
-                    gosto pelos estudos, o que me impulsionou a buscar novos desafios e oportunidades na área de
-                    Tecnologia. Minha experiência prévia como Dentista me proporcionou uma base sólida em habilidades
+                    gosto pelos estudos, o que me impulsionou a buscar novos desafios e oportunidades na área. Minha
+                    experiência prévia como Dentista me proporcionou uma base sólida em habilidades
                     interpessoais e de gestão. Trabalhando diretamente com clientes, aprimorei minha capacidade de
                     compreender de forma empática suas necessidades e preocupações, assim como minhas habilidades de
                     comunicação e resolução de conflitos. Além disso, a gestão da minha agenda profissional me ensinou a
                     importância da autorresponsabilidade, gerenciamento de tempo eficaz e adaptabilidade para lidar com
                     imprevistos. Tenho facilidade em trabalhar em equipe, sou proativa e estou comprometida em
-                    contribuir ativamente, aprender continuamente e crescer no ambiente dinâmico e desafiador da
-                    tecnologia.
+                    contribuir ativamente, aprender continuamente e crescer no ambiente dinâmico e desafiador da área de
+                    Tecnologia.
                 </p>
             </div>
 
